--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <h1>My personal portfolio</h1>
-<title> This is my website <</title>
+<title> This is my website </title>
 <img src="photo.jpg"/>
 <p>
 My name is Valerie lim. I am a student of Dunman High School. Currently in 1st year high school. </p>
@@ -19,5 +19,6 @@ Here’s our school website link <a href ="www.dhs.sg"> Dunman High School  </a>
 </ul>
 </body>
 </html>
+ 
  
 
