--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ Here’s our school website link <a href ="www.dhs.sg"> Dunman High School  </a>
 <li>Watching movies</li>
  <a href="http://www.insing.com/movies/captain-america-3-2016/id-69e70000/">captain america </a>
  </ul>
+ <script type='text/javascript' id='susi-bot-script' data-userid='668992b5569043620fb6f4f61fd7eb67' data-group='Shopping' data-language='en' data-skill='<shopping_bot>' src='https://skills.susi.ai/susi-chatbot.js'></script>
 </body>
 </html>
  
